--- a/pathway/package.json
+++ b/pathway/package.json
@@ -13,14 +13,15 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
+    "expo-checkbox": "~2.3.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
+    "react-native-maps": "1.3.2",
     "react-native-web": "~0.18.10",
-    "recoil": "^0.7.7",
-    "expo-checkbox": "~2.3.1"
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
