--- a/pathway/package.json
+++ b/pathway/package.json
@@ -12,11 +12,14 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native-stack": "^6.9.13",
+    "dotenv": "^16.3.1",
     "expo": "~48.0.18",
     "expo-checkbox": "~2.3.1",
+    "expo-constants": "~14.2.1",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
