--- a/pathway/package.json
+++ b/pathway/package.json
@@ -22,8 +22,11 @@
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-native": "0.71.8",
-    "react-native-web": "~0.18.10"
+    "react-native-maps": "1.3.2",
+    "react-native-web": "~0.18.10",
+    "react-native-web-maps": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
