--- a/pathway/package.json
+++ b/pathway/package.json
@@ -26,7 +26,8 @@
     "react-native": "0.71.8",
     "react-native-maps": "1.3.2",
     "react-native-web": "~0.18.10",
-    "react-native-web-maps": "^0.3.0"
+    "react-native-web-maps": "^0.3.0",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
