--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "expo": "^49.0.6",
+    "react-native-web": "^0.19.7",
+    "react-native-webview": "13.2.2",
     "react-router-dom": "^6.14.1"
   }
 }
