--- a/pathway/package.json
+++ b/pathway/package.json
@@ -27,7 +27,8 @@
     "react-native-maps": "1.3.2",
     "react-native-web": "~0.18.10",
     "react-native-web-maps": "^0.3.0",
-    "expo-location": "~15.1.1"
+    "expo-location": "~15.1.1",
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
